[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layered-dielectrics"
version = "0.1.0"
description = "Transfer matrix based layered dielectric propagation model for reflection coefficient and APD calculation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Chitnis", email = ""}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "openpyxl>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/ninad-sc/LayeredDielectrics"
Repository = "https://github.com/ninad-sc/LayeredDielectrics.git"
Issues = "https://github.com/ninad-sc/LayeredDielectrics/issues"

[tool.setuptools]
packages = ["src.dielectrics"]
